--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,8 @@ body {
   height: 70px;
   justify-items: center;
   align-items: center;
+  position: fixed;
+  width: 100%;
 }
 .header-main {
   background-image: url('../images/landing.jpg');
